--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,3 +471,9 @@ body {
     width: 3%;
     margin: 10px 20px;
 }
+
+.footer-text1 {
+    margin-top: 20px;
+    padding-bottom: 30px;
+    color: #fff;
+}
